
  The ``moving forward'' release

  * [FL] add udeb support (Closes: #216117)
    Thanks to Joey Hess for his input. Many changes, mostly to
     frontend/lintian, checks/debconf and checks/files
  
  * lib/Dep.pm:
    + [FL] Fixed some semantic errors (since noone ever observed the
      correspoding perl warnings the fixed parts are probably never
      used in the current code)

  * frontend/lintian:
    + [HE] Added a --dont-check-parts|-X option to allow users to specify
      which tests should not be run. Also added infos about this to the
      manpage. (Closes: #206674)

  * checks/binaries:
    + [JvW] Ignore static binaries in /usr/lib/debug
  * checks/changelog-file:
    + [HE] Check for the debmake template email address in the changelog
      entries. Patch by Steffen Moeller <moeller@pzr.uni-rostock.de>,
      thanks! (Closes: #199903)
  * checks/common_data:
    + [HE] Change known_obsolete_fields to allow checks/fields to
      report the Bugs field als obsolete.
  * checks/copyright-file:
    + [HE] Change usr-doc-symlink-to-foreign-package check to throw an 
      error when a package doesn't depend on the *same* version of the
      package its /usr/share/doc/$foo dir is symlinked to. This is supposed
      to ensure that both come from the same source and the same source
      version. (Closes: #201470)
  * checks/cruft.desc:
    + [HE] Reworded some parts and bumped the Standards-Version after 
      checking for changes. (Closes: #235735)
  * checks/debconf{,.desc}:
    + [JvW] Add an error for a bogus default for a boolean template
      (Closes: #236846)
    + [HE] Check for duplicate fields in templates. Fix based on
      patch by Denis Barbier <barbier@linuxfr.org>, thanks! (Closes: #233116)
  * checks/debian-readme:
    + [HE] Add check for the debmake template email address. Patch by Steffen
      Moeller <moeller@pzr.uni-rostock.de>, thanks!
  * checks/deb-format: